...
        content: widget.content != null ? Text(widget.content!) : null,
        actions: [
          ...widget.actions,
          if (widget.actions.isEmpty) ...[
            TextButton(
              onPressed: () => Navigator.of(context).pop<T>(),
              child: const Text('OK'),
            ),
          ],
        ],
      ),
    );
  }
...
