...
          end: const Offset(0.1, 0.1),
          curve: Curves.easeInOut,
          duration: 0.25.seconds,
        ),
      ],
      child: FloatingActionButton(
        key: const Key('options_button'),
        shape: const CircleBorder(),
        onPressed: () {
          if (controller?.isAnimating ?? false) return;
          isClicked = !isClicked;
          isClicked ? controller?.forward() : controller?.reverse();
          _showOverlay(context);
...
