...
                          physics: const NeverScrollableScrollPhysics(),
                          children: [
                            // Budgets Page
                            state.budgets.isEmpty
                                ? Center(
                                    child: Text(
                                      'No Budgets',
                                      style: Theme.of(context).textTheme.bodyMedium,
                                    ),
                                  )
                                : ListView.builder(
                                    padding: const EdgeInsets.symmetric(horizontal: 16),
                                    itemCount: state.budgets.length,
...
