...
          isar.budgets.clear(),
          isar.budgetLists.clear(),
          isar.categorys.clear(),
        ]);
      });
      var budget = await BudgetRepository().add(
        name: 'Budget 1',
        description: 'Budget 1 Description',
        startDate: DateTime.now(),
        endDate: DateTime.now().add(365.days),
        isRoutine: true,
        routineInterval: 365.days.inSeconds,
        isCompleted: false,
...
